feat: added homepage to package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "wind-bnb",
   "version": "0.1.0",
+  "homepage": "http://rebecca-xm.github.io/wind-bnb/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
