--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "homepage": "http://rebecca-xm.github.io/wind-bnb/",
   "private": true,
   "dependencies": {
+    "@heroicons/react": "^1.0.5",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "date-fns": "^2.28.0",
     "react": "^17.0.2",
+    "react-date-range": "^1.4.0",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "sass": "^1.48.0",
