--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wind-bnb",
   "version": "0.1.0",
-  "homepage": "http://rebecca-xm.github.io/wind-bnb/",
+  "homepage": "http://MirMara/wind-bnb/",
   "private": true,
   "dependencies": {
     "@heroicons/react": "^1.0.5",
